--- a/static/css/page/news_Detail.css
+++ b/static/css/page/news_Detail.css
@@ -91,12 +91,22 @@ body, ul, span, .content {
     margin: 0 auto;
     cursor: default; }
     .footer p .text {
+      display: inline-block;
       font-size: 20px;
       letter-spacing: 1px;
       margin: 0 40px 0 40px; }
     .footer p .text-1 {
+      display: inline-block;
       margin-left: 55px;
       font-size: 12px;
+      color: #060606; }
+    .footer p #behind a {
+      display: inline-block;
+      color: #060606; }
+    .footer p #font a {
+      display: inline-block;
+      color: #060606; }
+    .footer p a:hover {
       color: #060606; }
     .footer p .page {
       display: inline-block;
