--- a/static/sass/page/news_Detail.scss
+++ b/static/sass/page/news_Detail.scss
@@ -114,14 +114,37 @@ body,ul,span{
 		    line-height:65px;
 	        margin:0 auto;
 	        cursor:default;
-			.text{	
-				font-size:20px;
-				letter-spacing:1px;
-				margin: 0 40px 0 40px;
+			.text{
+				
+					display:inline-block;
+					font-size:20px;
+				    letter-spacing:1px;
+				    margin: 0 40px 0 40px;
+				
+				
 			}
 			.text-1{
-				margin-left:55px;
-				font-size:12px;
+			
+					display:inline-block;
+					margin-left:55px;
+				    font-size:12px;
+				    color:#060606;
+					
+				
+			}
+			#behind{
+	            a{
+		            display:inline-block;
+		            color:#060606;
+	            }
+			}
+			#font{
+	            a{
+		            display:inline-block;
+		            color:#060606;
+	            }
+			}
+			a:hover{
 				color:#060606;
 			}
 			.page{
